2002-10-16  Richard Williamson  <rjw@apple.com>

        Fixed a few regressions in drawing of frame resize handle
        in preparation for drawing frame borders and completing
        2982466.
        
        * khtml/rendering/render_frames.cpp:
        (RenderFrameSet::userResize):
        * kwq/KWQPainter.mm:
        (QPainter::drawRect):
        * kwq/qt/qscrollview.h:
        * kwq/KWQScrollView.mm:
        (QScrollView::updateContents):
        * kwq/KWQWidget.mm:
        (QWidget::enableFlushDrawing):
        
        Use static_cast everywhere DOM::NodeImpl is cast to
        subclass.
        
        * kwq/WebCoreDOMNode.mm:
        (-[WebCoreDOMNode DOM::]):
        (-[WebCoreDOMNodeList DOM::]):
        (-[WebCoreDOMNamedNodeMap DOM::]):
        (-[WebCoreDOMAttr DOM::]):

2002-10-16  David Hyatt  <hyatt@apple.com>

	Fix crash on pages with bulleted lists.  Making sure the list
	item marker doesn't get a layer (which means it has to be
	painted by hand now by the list item object).
	
        * khtml/rendering/render_box.cpp:
        (RenderBox::setStyle):
        * khtml/rendering/render_list.cpp:
        (RenderListItem::printObject):
        * khtml/rendering/render_list.h:
        * khtml/rendering/render_object.h:

2002-10-16  Darin Adler  <darin@apple.com>

	- fixed 3072542 -- double "&" in submit button

        * khtml/rendering/render_form.cpp: (RenderSubmitButton::rawText):
	Don't double the "&" character, not needed for KWQ.

2002-10-16  David Hyatt  <hyatt@apple.com>

	When render objects were being dynamically wrapped in anonymous
	blocks, the layer parenting connection was being broken without
	being reconnected when the wrapping finished.  This patch
	shifts the layer connection into the functions that are also
	called in the dynamic case.

	With this fix, all objects on mrskin finally show up.  Yeehah.
	brainjar.com's brain is back too.

	This patch also stops treating images as inline if they are